--- a/angularSource/src/app/components/navbar/navbar.component.css
+++ b/angularSource/src/app/components/navbar/navbar.component.css
@@ -11,5 +11,5 @@
     color: white;
 }
 .navbar-default{
-	background-image: linear-gradient(#2196F3 0px, #2196F3 100%);
+	background-image: linear-gradient(rgb(173,210,66) 0px, rgb(173,210,66) 100%);
 }
