Final front end changes

--- a/angularSource/src/app/components/mainpage/mainpage.component.css
+++ b/angularSource/src/app/components/mainpage/mainpage.component.css
@@ -1,6 +1,10 @@
-img-button{
-width:20%;
-height:50%;
 
+.chart rect {
+  fill: steelblue;
+}
 
+.chart text {
+  fill: white;
+  font: 10px sans-serif;
+  text-anchor: end;
 }
