--- a/angularSource/src/app/components/navbar/navbar.component.css
+++ b/angularSource/src/app/components/navbar/navbar.component.css
@@ -1,15 +1,16 @@
-.navbar {
+/*.navbar {
   text-align:center;
 }
 .navbar-header {
     display:inline-block;
     float:none;
-}
-.navbar-brand{
+}*/
+/*.navbar-brand{
 	font-size: 25px;
     font-weight: bold;
     color: white;
 }
 .navbar-default{
+    
 	background-image: linear-gradient(rgb(173,210,66) 0px, rgb(173,210,66) 100%);
-}
+}*/
