--- a/angularSource/src/app/components/mainpage/mainpage.component.html
+++ b/angularSource/src/app/components/mainpage/mainpage.component.html
@@ -1,23 +1,72 @@
+
 <div class="mainpage panel-default">
     <div class="panel-body">
         <div class="row">
             <div class="col-md-9">
                 <h2> {{title}}</h2>
-                <button class ="imgButton" style="background-image:url('{{image}}')"></button>
+                <a  class ="btn btn-primary imgButton" routerLink="/resume" routerLinkActive="active">
+                    <img src="{{image}}" style="width:300px; height: 450px">
+                </a>
             </div>
             <div class="col-md-3">
                 <h2> {{goodTitle}}</h2>
-                <h2> {{goodTitle}}</h2>
+                <canvas id="myChart1" width="300" height="300"></canvas>
             </div>
         </div>
         <div class="row">
             <div class="col-md-9">
-               <button type="button">{{train}}</button>
+               <a class="btn btn-primary" style="width:300px; height: 200px; font-size: 20px; line-height: 200px;margin-top: 15px " routerLink="/train" routerLinkActive="active">{{train}}</a>
+              
             </div>
              <div class="col-md-3">
                 <h2> {{improveTitle}}</h2>
-                <h2> {{improveTitle}}</h2>
+                <canvas id="myChart2" width="300" height="300"></canvas>
             </div>
         </div>
     </div>
 </div>
+
+
+<script>
+var dat = {
+    type: 'bar',
+    data: {
+        labels: ["Java", "Names", "Race", "iOS", "Location", "pineapple on pizza"],
+        datasets: [{
+            label: ' ',
+            data: [12, 19, 3, 5, 2, 3],
+            backgroundColor: [
+                'rgba(255, 99, 132, 0.2)',
+                'rgba(54, 162, 235, 0.2)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+                'rgba(153, 102, 255, 0.2)',
+                'rgba(255, 159, 64, 0.2)'
+            ],
+            borderColor: [
+                'rgba(255,99,132,1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+        }]
+    },
+    options: {
+        scales: {
+            yAxes: [{
+                ticks: {
+                    beginAtZero:true
+                }
+            }]
+        }
+    }
+};
+var ctx = document.getElementById("myChart1");
+var ctx1 = document.getElementById("myChart2");
+var myChart = new Chart(ctx, dat);
+
+var myChart = new Chart(ctx1,dat);
+</script>
