--- a/angularSource/src/app/components/navbar/navbar.component.html
+++ b/angularSource/src/app/components/navbar/navbar.component.html
@@ -1,15 +1,16 @@
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Block Discrimination</a>
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">Block Discrimination</a>
+            
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-8">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a routerLink="/train" routerLinkActive="active">Train</a></li>
+                    <li><a routerLink="/resume" routerLinkActive="active">Resume</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
-
-  </div><!-- /.container-fluid -->
 </nav>
+
